wrote some documentation and got tired

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,15 @@
 body {
     background-color: darkgray;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-family: 'Quicksand', 'Arial', sans-serif;
+}
+
+content {
+    display: block;
+    width: 50%;
+    padding: 1rem 2.5rem 1rem 1rem;
+    min-width: 800px;
+    background-color: rgb(197, 197, 178);
 }
