--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,15 +1,107 @@
 body {
-    background-color: darkgray;
+    background-color: rgb(31, 31, 30);
     display: flex;
     flex-direction: column;
     align-items: center;
     font-family: 'Quicksand', 'Arial', sans-serif;
+    font-size: 12pt;
 }
+
+h1 {color: rgba(197, 197, 178, 0.534)}
+a {color:rgb(32, 27, 83)}
+a:hover {color:rgb(57, 51, 133)}
 
 content {
     display: block;
     width: 50%;
     padding: 1rem 2.5rem 1rem 1rem;
     min-width: 800px;
-    background-color: rgb(197, 197, 178);
+    background-color: rgba(197, 197, 178, 0.534);
+    color: rgb(29, 28, 28);
+}
+
+h2:first-child {
+    margin-top: 0;
+}
+
+hr {
+    width: 100%;
+    background-color: rgba(0, 0, 0, .25);
+    height: 2px;
+    border: 0;
+}
+
+p {
+    margin-left: 1rem;
+    margin-top: 0.25rem;
+    margin-top: 0.25rem;
+}
+
+p em {
+    background-color: rgba(189, 189, 189, 0.2);
+    border-radius: 3px;
+    padding: 0 5px;
+    display: inline-block;
+    font-family: monospace;
+    font-style: normal;
+    font-size: 12pt;
+}
+
+p strong {
+    font-weight: 700;
+}
+
+p > strong > em {
+    display: block;
+    background-color: rgba(189, 189, 189, 0.2);
+    border-radius: 3px;
+    margin-left: 1rem;
+    padding: 5px;
+    font-family: 'Quicksand', 'Arial', sans-serif;
+}
+
+
+/* lists */
+ul {
+    list-style: none;
+}
+
+li {
+    border-left: 2px solid rgba(0, 0, 0, .25);
+    margin-bottom: 10px;
+    padding-left: 5px;
+}
+
+
+/* inner section headers */
+h3,h4 {
+    margin-left: 1rem;
+    margin-bottom: 0;
+    margin-top: 1rem;
+}
+
+h3 {
+    border-left: 2px solid rgba(0, 0, 0, .25);
+    padding-left: 5px;
+}
+
+h3+.language-json {
+    margin-top: 0.5rem;
+}
+
+
+/* Code blocks parent element */
+.language-python,.language-json {
+    background-color: rgba(189, 189, 189, 0.2);
+    border-radius: 3px;
+
+    padding: 0.25rem;
+    margin-left: 2rem;
+    margin-bottom: 1rem;
+    padding: 0.1rem;
+}
+
+pre {
+    font-size: 12pt;
+    margin:0;
 }
