--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,9 +51,11 @@ p strong {
     font-weight: 700;
 }
 
+
+/* alert box */
 p > strong > em {
     display: block;
-    background-color: rgba(189, 189, 189, 0.9);
+    background-color: rgba(204, 106, 106, 0.9);
     border-radius: 3px;
     margin-left: 1rem;
     padding: 5px;
@@ -77,7 +79,7 @@ li {
 h3,h4 {
     margin-left: 1rem;
     margin-bottom: 0;
-    margin-top: 1rem;
+    margin-top: 1.25rem;
 }
 
 h3 {
