--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,7 @@
 body {
     background-color: rgb(31, 31, 30);
+    padding: 0;
+    margin: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -115,7 +117,7 @@ pre {
 }
 
 .k {color: rgb(170, 57, 57)}
-.nn {}
+/* .nn {} */
 .kn {color: blue}
 .n {color: green}
 .p {color: rgb(146, 73, 142)}
@@ -129,8 +131,77 @@ pre {
 
 
 /* table of contents */
-/* ul#toc {
-    position: absolute;
-    left:0;
-    top:0;
-} */
+#toc-container {
+    position: sticky;
+    top: 0;
+    left: 0;
+    height: 0;
+    width: 100%;
+}
+
+#toc-container-inner {
+    width: 450px;
+    padding: 1rem;
+}
+
+#toc-menu {
+    display: flex;
+}
+
+#toc-button {
+    background-color: rgba(197, 197, 178, 0.89);
+    display: block;
+    width: 30px;
+    height: 30px;
+    margin-right: 5px;
+    border-radius: 100%;
+}
+
+#toc-button>img {
+    width: 100%;
+    height: 100%;
+}
+
+#toc-menu>span {
+    color: rgba(197, 197, 178, 0.89);
+    background-color: rgb(31, 31, 30, 0.95);
+    padding-right: 0.25rem;
+    border-radius: 2px;
+    display: flex;
+    align-items: center;
+}
+
+#toc-menu.closed>span{
+    opacity: 0;
+}
+
+#toc-menu.closed:hover>span {
+    opacity: 1;
+    transition: 0.25s;
+}
+
+
+
+/* actual toc list */
+
+#toc-list-container {
+    padding: 0;
+    position: sticky;
+    top: 0;
+    left: 0;
+    border: 1px solid rgb(31, 31, 30);
+    border-radius: 3px;
+    background-color: rgb(31, 31, 30, 0.89);
+}
+
+#toc-list-container.closed {
+    display: none;   
+}
+
+ul#toc {
+    padding: 0.5rem 0.5rem;
+    margin: 2px;
+    background-color: rgba(197, 197, 178, 0.89);
+    border-radius: 3px;
+    color: rgb(29, 28, 28);
+}
